Courses/202404/Templates/helloprod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloprod-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: helloprod
  template:
    metadata:
      labels:
        app: helloprod
    spec:
      containers:
      - image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        name: helloprodpod
