Courses/202404/Templates/helloprod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloprod-service
spec:
  selector:
    app: helloprod
  ports:
    - port: 80
      targetPort: 80
