Courses/202404/Templates/helloprod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloprod-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /helloprod
        pathType: Prefix
        backend:
          service:
            name: helloprod-service
            port:
              number: 80
